# grate

./: .gitignore  COPYING  Makefile  Makefile.am  README.md  autogen.sh  configure.ac  gr2d-test.c  hex2float.c  meson.build
data/: font.fnt
data/grate/: Attribution.txt  Creative Commons Attribution License 3.0.txt
include/: Makefile.am  cgdrv.h  host1x.h  libcgc.h  list.h  record_replay.h  tgr_3d.xml.h
shaders/frag/: atan.glsl  cmove.glsl  cos.glsl  dfdx.glsl  exp.glsl  fwidth.glsl  lastfrag.glsl  sat.glsl  sin.glsl  vface.glsl
shaders/vert/: abs-vec4.glsl  add-vec4.glsl  arl.glsl  atan.glsl  cos.glsl  dot2.glsl  dot3.glsl  dot4.glsl  dual-ops.glsl  exp2.glsl  floor-vec4.glsl  log2.glsl  mad-vec4-wwww.glsl  mad-vec4-xxxx.glsl  mad-vec4.glsl  max.glsl  min.glsl  mov-vec4.glsl  mul-vec4.glsl  neg-vec4.glsl  pred.glsl  rcp.glsl  rsq.glsl  seq.glsl  sge.glsl  sle.glsl  slt.glsl  sne.glsl
src/: Makefile.am  meson.build
src/libcgc/: Makefile.am  dummy.c  instruction.c  libcgc-private.h  libcgc.h  meson.build  shader.c  stream.c
src/libgrate/: .gitignore  Makefile.am  asm.h  asm_lexer.l  asm_parser.y  disasm.c  display.c  etc1.cpp  etc1.h  fragment_asm.h  fragment_asm.l  fragment_asm.y  fragment_asm_lexer.l  fragment_asm_parser.y  fragment_disasm.c  gr2d.c  gr2d.h  gr3d.c  gr3d.h  grate-2d.c  grate-3d-ctx.c  grate-3d-ctx.h  grate-3d.c  grate-3d.h  grate-asm.c  grate-font.c  grate-texture.c  grate.c  grate.h  libgrate-private.h  libgrate.pc.in  linker_asm.h  linker_asm.l  linker_asm.y  linker_asm_lexer.l  linker_asm_parser.y  linker_disasm.c  matrix.c  matrix.h  meson.build  (+13 more)
src/libhost1x/: Makefile.am  dri-display.c  host1x-drm.c  host1x-dummy.c  host1x-framebuffer.c  host1x-gr2d.c  host1x-gr3d.c  host1x-nvhost.c  host1x-pixelbuffer.c  host1x-private.h  host1x-texture.c  host1x.c  meson.build  nvhost-display.c  nvhost-display.h  nvhost-gr2d.c  nvhost-gr2d.h  nvhost-gr3d.c  nvhost-gr3d.h  nvhost-nvmap.c  nvhost-nvmap.h  nvhost.c  nvhost.h  stream.c  tegra_dc_ext.h  tegra_drm.h  x11-display.c  x11-display.h
src/libwrap/: .gitignore  Makefile.am  cdma_parser.c  cdma_parser.h  cgdrv.c  disasm.c  disasm.h  host1x.c  host1x.h  list.h  meson.build  nvhost.c  nvhost.h  recorder.c  recorder.h  syscall.c  syscall.h  tegra_drm.h  utils.c  utils.h
tests/: Makefile.am  meson.build
tests/3d/: common.c  common.h  egl-triangle.c  egl-x11-triangle.c  gles-clear-framebuffer.c  gles-clear.c  gles-pbuffer-clear.c  gles-shader-fill.c
tests/drm/: .gitignore  Makefile.am  vblank.c
tests/gles/: .gitignore  Makefile.am  common.c  common.h  egl-clear.c  egl-triangle.c  egl-x11-clear.c  gles-clear.c  gles-info.c  gles-pbuffer-clear.c  gles-pbuffer-fill.c  gles-pbuffer-quad-textured.c  gles-pbuffer-quad.c  gles-pbuffer-triangle-rotate.c  gles-pbuffer-triangle.c  gles-pbuffer-uniforms-rg.c  gles-pbuffer-uniforms-rgb.c  gles-pbuffer-uniforms.c  gles-pbuffer-vertex-offset.c  gles-quad-textured.c  gles-shader-fill.c
tests/gles1/: .gitignore  Makefile.am  common.c  common.h  gles-clip.c  gles-flatshading.c  gles-info.c  gles-logicop.c  gles-tex-combiners.c  meson.build
tests/gles2/: .gitignore  Makefile.am  common.c  common.h  egl-x11-clear.c  egl-x11-triangle.c  gles-cube-textured.c  gles-cube.c  gles-info.c  gles-pbuffer-cgshader.c  gles-pbuffer-cube.c  gles-pbuffer-fill.c  gles-pbuffer-triangle-rotate.c  gles-pbuffer-triangle.c  gles-pbuffer-uniforms-rg.c  gles-pbuffer-uniforms-rgb.c  gles-pbuffer-uniforms.c  gles-pbuffer-vertex-offset.c  gles-quad-textured.c  gles-quad-textured2.c  gles-quad-textured3.c  gles-stencil.c  meson.build
tests/gr2d/: .gitignore  Makefile.am  gr2d-fill.c
tests/gr3d/: .gitignore  Makefile.am  gr3d-triangle.c
tests/grate/: .gitignore  Makefile.am  asm_tests.sh  assembler.c  clear.c  cube-textured.c  cube-textured2.c  cube-textured3.c  cube.c  interactive.c  meson.build  quad-textured.c  quad.c  stencil.c  texture-filter.c  texture-wrap.c  triangle-rotate.c  triangle.c
tests/grate/asm/: cube2_fs.txt  cube2_grate_fs.txt  cube2_linker.txt  cube2_vs.txt  filter_quad_fs.txt  filter_quad_linker.txt  filter_quad_vs.txt  fs_mfu_tests.txt  fs_uniform.txt  fs_vs_tests.txt  linker_vs_tests.txt  sky_fs.txt  sky_linker.txt  sky_vs.txt  stencil_test_fs.txt  stencil_test_fs2.txt  stencil_test_linker.txt  stencil_test_vs.txt  texture_wrap_fs.txt  texture_wrap_linker.txt  texture_wrap_vs.txt  vs_attribute_relative_addressing.txt  vs_branching.txt  vs_constant.txt  vs_constant_relative_addressing.txt  vs_export_relative_addressing.txt  vs_function.txt  vs_mov.txt  vs_predicate.txt  vs_stack.txt  vs_uniform.txt
tests/host1x/: .gitignore  Makefile.am  gr2d-blit.c  gr2d-clear.c  gr2d-context.c  gr3d-triangle.c  meson.build
tests/nvhost/: .gitignore  Makefile.am  gr2d-fill.c  gr2d.c  gr3d-triangle.c  gr3d.c  gr3d.h  nvhost.c  nvhost.h  nvmap.c  nvmap.h
tools/: .gitignore  Makefile.am  assembler.c  cgc.c  fp20.c  fx10.c  meson.build  replay.c  reset3d.c
wrap/: nvhost.c  nvhost.h  syscall.c  utils.c  utils.h
