noinst_PROGRAMS = \
	clear \
	cube \
	cube-textured \
	cube-textured2 \
	interactive \
	quad \
	stencil \
	texture-filter \
	texture-wrap \
	triangle \
	triangle-rotate

AM_CPPFLAGS = \
	-I$(top_srcdir)/include \
	-I$(top_srcdir)/src/libgrate

AM_LDFLAGS = -static

LDADD = \
	$(top_builddir)/src/libgrate/libgrate.la
