noinst_PROGRAMS = \
	clear \
	cube \
	cube-textured \
	cube-textured2 \
	cube-textured3 \
	interactive \
	quad \
	stencil \
	texture-filter \
	texture-wrap \
	triangle \
	triangle-rotate

AM_LDFLAGS = -lm

AM_CPPFLAGS = \
	-I$(top_srcdir)/include \
	-I$(top_srcdir)/src/libgrate

LDADD = \
	$(top_builddir)/src/libgrate/libgrate.la
